# mcp-github

./: .env.template  .gitignore  Dockerfile  README.md  cline_mcp_settings.json  pyproject.toml  requirements.txt  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yaml
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/mcp_github/: __init__.py  github.py  server.py
src/mcp_github/commands/: __init__.py  create.py  get.py
src/mcp_github/tools/: __init__.py
tests/: test_server.py
