[tool.poetry]
name = "mcp-github"
version = "0.1.0"
description = "GitHub MCP server for Cline"
authors = ["Tim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^2.6.0"
mcp = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
