[project]
name = "mcp_github"
version = "0.1.0"
description = "GitHub MCP server for Cline"
authors = [{name = "Tim"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.6.0",
    "mcp>=1.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.7.0",
    "mypy>=1.5.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
